# hypermodern-python

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst
misc/: cacert_loc.py
src/hm_python/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
